--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html  xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" />
- <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
+<link rel="stylesheet" th:href = "@{/css/bootstrap.css}">
+<link rel="stylesheet" th:href = "@{/css/style.css}">
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<style>
+.table {
+   margin: auto;
+   width: 50% !important; 
+   margin-top: 10%;
+}
+
+</style>
+
 </head>
 <body>
-<div>
- <h2 >Spring Boot Crud System -Student Registration</h2>
- <tr>
- <div align = "left" >    
-      <h3><a  th:href="@{'/new'}">Add new</a></h3>     
-     </div>
- 
- </tr>
- <tr>
- 
- <div class="col-sm-5" align = "center">
-                 <div class="panel-body" align = "center" >
-                 <table class="table">
+<div class="">
+<table class="table">
   <thead class="thead-dark">
     <tr>
-       <th>Student ID</th>
-            <th>Student Name</th>
-            <th>Course</th>
-            <th>Fee</th>
-            <th>Edit</th>
-            <th>Delete</th>
-   </tr>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Address</th>
+      <th scope="col">Age</th>
+      <th scope="col">Email</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      
+    </tr>
   </thead>
   <tbody>
-      <tr  th:each="student : ${liststudent }">
- <td th:text="${student.Id}">Student ID</td>
- <td th:text="${student.username}">StudentName</td>
- <td th:text="${student.job}">Course</td>
- <td th:text="${student.email}">Fee</td> 
- <td>
+  <tr  th:each="student : ${liststudent }">
+  <td th:text="${student.Id}">Student ID</td>
+  <td th:text="${student.name}">Name</td>
+  <td th:text="${student.address}">Address</td>
+  <td th:text="${student.age}">Age</td>
+  <td th:text="${student.email}">Email</td>
+  
+  <td>
  <a th:href="@{'/edit'}">Edit</a>
  </td>     
  <td>
  <a th:href="@{'/delete/' + ${student.Id}}">Delete</a>
- </td>     
- </tr> 
-   
+ </td>   
+      
+  </tr> 
+    
   </tbody>
 </table>
-                    
-                 </div>
- 
-            </div> 
- 
- </tr>
- 
- </tbody>
- </table>
- <div>
+</div>
+<div class="new">
+<a class="btn btn-primary" th:href="@{'/new'}" role="button">New</a>
+</div>
 
 </body>
 </html>
